cmake_minimum_required(VERSION 3.19)
project(C__ C)

set(CMAKE_C_STANDARD 99)

add_executable(C__ ../librairie/main.c "test.c" "tp-devine-un-nombre.c" "calcul.c" "tp-pointeur.c" "str.c" ../librairie/functions.h ../librairie/functions.c "perimetre.c" ../createContacts.c "../contactList.c" ../createContacts.c ../createContacts.c)